# Cipher

./: AGENTS.md  Cargo.toml  GEMINI.md  README.md  boot_backup.sh  forensic_spin_glass.py  forge_obliterated_backup.py  generative_langevin.py  hopfield_memory.py  progress.txt
cipher_core/: Cargo.toml
cipher_core/src/: brainstem.rs  lib.rs  llm.rs  main.rs  mlx_core.rs  vector_engine.rs
cipher_core/src/crypto/: aion_gateway.rs  aion_openapi.json  mod.rs
cipher_engine/: Cargo.toml
cipher_engine/motor_cortex/: self_task_list.md
cipher_engine/src/: cyber_physical.rs  endocrine.rs  frontal.rs  hud.rs  main.rs  sandbox.rs  temporal.rs  thermodynamic.rs
cipher_engine/src/trading/: core.rs  entropy.rs
cipher_forge/: Cargo.toml
cipher_forge/src/: lib.rs
cipher_simulacrum/: Cargo.toml
cipher_simulacrum/src/: lib.rs
cipher_ui/: package-lock.json  package.json
cipher_ui/src/app/: globals.css  page.tsx
cipher_ui/src/app/api/chat/: route.ts
cipher_ui/src/app/api/poll/: route.ts
docs/: DEVELOPMENT_HISTORY.md
motor_wasi_src/spider/src/: main.rs
