[package]
name = "cipher_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
cipher_core = { path = "../cipher_core" }
anyhow = "1.0"
dotenvy = "0.15"
notify = "6.1.1"
dirs = "6.0.0"
surrealdb = { version = "1.4", features = ["kv-surrealkv"] }
wasmtime = "42.0.1"
wasmtime-wasi = "42.0.1"
wasmtime-wasi-http = "42.0.1"
cap-std = "4.0.2"
mlx-rs = { version = "0.25.3", features = ["metal"] }
